<resources>
    <string name="app_name">AndroidChatClient</string>
    <string name="enter_btn">Enter Room</string>
    <string name="user_name">username</string>
    <string name="room_name">room name</string>
    <string name="login">Login Page</string>
    <string name="messages">Messages</string>
    <string name="back_btn">Go Back</string>
    <string name="user_name_input">username</string>
    <string name="send_btn">Send</string>
    <string name="messageToSend">Type message here</string>
</resources>