<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#804DB6AC"
    tools:context=".ChatViewActivity">

    <TextView
        android:id="@+id/messageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alata"
        android:text="@string/messages"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#536DFE"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/alata"
        android:insetLeft="5dp"
        android:insetRight="5dp"
        android:onClick="goBack"
        android:text="@string/back_btn"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/messageView"
        android:layout_width="365dp"
        android:layout_height="488dp"
        android:layout_marginBottom="18dp"
        android:background="#809575CD"
        app:layout_constraintBottom_toTopOf="@+id/messageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="16dp"
        android:onClick="sendMessages"
        android:text="@string/send_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/messageText"
        android:layout_width="367dp"
        android:layout_height="53dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/messageToSend"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>